# goals

./: .coveragerc  .env.example  .gitignore  .pylintrc  Pipfile  Procfile  README.md  dev-requirements.in  dev-requirements.txt  docker-compose.yml  fly.toml  gunicorn.conf.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.deploy/: goals.service  nginx.conf  run.sh  update.sh
.github/workflows/: python.yml  upgrade-dependencies.yml
almograve/: asgi.py  settings.py  urls.py  wsgi.py
almograve/templates/: base.html  board_form.html  event.html  events.html  form.html  goal_form.html  goals.html  index.html  login_form.html  month.html  settings.html  table.html
goals/: admin.py  asgi.py  context_processors.py  factories.py  forms.py  models.py  services.py  settings.py  tests.py  urls.py  views.py  wsgi.py
goals/migrations/: 0001_initial.py  0002_auto_20210907_0029.py  0003_auto_20210922_2004.py  0004_auto_20210925_0155.py  0005_alter_event_date_event.py
goals/templates/: base.html  board_form.html  goal_form.html  history.html  index.html  login_form.html  month.html
index/: tests.py  views.py
static/: style.css
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
users/: factories.py  models.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_user_default_board.py
whitenoise_root/: modal.js  site.webmanifest  style.css
