[project]
name = "fedidevs"
version = "2024"
requires-python = ">=3.12"
dependencies = [
  "django",
  "django-environ",
  "django-htmx",
  "django-tui",
  "gunicorn",
  "psycopg2-binary",
  "sentry-sdk",
  "whitenoise",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
  "django-stubs",
  "djlint",
  "factory-boy",
  "faker-optional",
  "flakytest",
  "mypy",
  "pylint",
  "pylint-django",
  "pytest-cov",
  "pytest-django",
  "pytest-watch",
  "ruff",
]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = "true"

[tool.django-stubs]
django_settings_module = "goals.settings"

[tool.djlint]
ignore="H021"
extend_exclude=".venv,.vscode,.git,.github,htmlcov"

[tool.ruff]
line-length = 140
exclude = [
    ".venv",
    ".vscode",
    ".git",
    ".github",
    "htmlcov",
]
target-version = "py311"
fix = true
