[project]
name = "goals.pecar.me"
version = "2024"
requires-python = ">=3.14"
dependencies = [
  "django>=5.2a1",
  "django-environ",
  "django-htmx",
  "django-tui",
  "gunicorn",
  "psycopg[binary]",
  "sentry-sdk",
  "whitenoise",
  # Dev dependencies
  "django-stubs",
  "djlint",
  "factory-boy",
  "faker-optional",
  "flakytest",
  "mypy",
  "pylint",
  "pylint-django",
  "pytest-cov",
  "pytest-django",
  "pytest-watch",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = "true"

[tool.django-stubs]
django_settings_module = "goals.settings"

[tool.djlint]
ignore="H021"
extend_exclude=".venv,.vscode,.git,.github,htmlcov"

[tool.ruff]
line-length = 140
exclude = [
    ".venv",
    ".vscode",
    ".git",
    ".github",
    "htmlcov",
]
target-version = "py313"
fix = true
